# fp-homework

./: .gitignore  .hident.yaml  LICENSE  README.md  stack.yaml
hw0/: README.md  hw0.cabal
hw0/app/: Main.hs
hw0/src/: Task1.hs  Task3.hs  Task4.hs  Task6.hs  Task7.hs
hw1/: hw1.cabal
hw1-second-chance/: README.md  hw1-second-chance.cabal
hw1-second-chance/src/: Block6Task1.hs  Block6Task2.hs  Block6Task3.hs  Block6Task4.hs
hw1-second-chance/test/: Main.hs
hw1/app/: Main.hs
hw1/src/: Block1Task1.hs  Block1Task2.hs  Block1Task3.hs  Block2Task1.hs  Block2Task2.hs  Block3Task1.hs  Block3Task2.hs  Block4Task1.hs  Block4Task2.hs  Block4Task3.hs  Block5Task1.hs  Block5Task2.hs  Block6Task1.hs
hw1/test/: Main.hs
hw2/: LICENSE  hw2.cabal
hw2/app/: Main.hs
hw2/src/: Errors.hs  Footer.hs  III.hs  IO.hs  MainEditor.hs  MainWindow.hs  Manager.hs  UI.hs  VCS.hs
