name:           hw1-second-chance
version:             0.1.0.0
synopsis:            Synopsis for task 0
description:         Task 0 for FP ITMO course

homepage:            https://github.com/nikitos9i/fp-homework/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              nikitos9i
maintainer:          savinov_nikitka@mail.ru
copyright:           2020 nikitos9i

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:    src
  exposed-modules:  Block6Task1
                  , Block6Task2
                  , Block6Task3
                  , Block6Task4
  ghc-options:      -Wall
  build-depends:    base >= 4.9 && < 5
                  , mtl
  default-language: Haskell2010

test-suite hw1-second-chance-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Paths_hw1_second_chance
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , hw1-second-chance
    , tasty
    , tasty-hspec
    , tasty-hunit
  default-language: Haskell2010
