name:                hw2
version:             0.1.0.0
synopsis:            Synopsis for task 0
description:         Task 0 for FP ITMO course

homepage:            https://github.com/nikitos9i/fp-homework/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              nikitos9i
maintainer:          savinov_nikitka@mail.ru
copyright:           2020 nikitos9i

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     IO, Footer, MainWindow, UI, Header, Manager, MainEditor, VCS
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , mtl
                     , brick
                     , time
                     , filepath
                     , vty
                     , hashable
                     , optparse-applicative
                     , unordered-containers
                     , directory
                     , vector
                     , text
                     , process
                     , conduit
  default-language:    Haskell2010

executable hw2
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , brick
                     , hw2
                     , time
                     , vty
                     , unordered-containers
                     , hashable
                     , filepath
                     , optparse-applicative
                     , directory
                     , vector
                     , text
                     , process
                     , conduit
  default-language:    Haskell2010

test-suite hw2-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_hw2
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , hw2
  default-language: Haskell2010
